--- a/claimSenseAI_web/templates/index.html
+++ b/claimSenseAI_web/templates/index.html
@@ -17,7 +17,7 @@
   <div id="response">
       <form id="form_post" action="/process" method="POST" enctype="multipart/form-data">
         <div class="block">
-          <div class="center">
+          <div class="row">
             <label class="custom_file_upload" for="claim_pdf">Claim PDF</label>
             <label class="custom_file_upload" for="policy_pdf">Policy PDF</label>
           </div>
@@ -26,9 +26,14 @@
               <span id="policy_file_name">No File Chosen</span>
             </div>
           </div>
-        <p id="warning">Please Give the two documents required</p>
+        <p id="file_warning">Please Give the two documents required</p>
         <input id="claim_pdf" type="file" name="claim_pdf" required>
           <input id="policy_pdf" type="file" name="policy_pdf" required>
+        <div class="center">
+          <label for="prompt"></label>
+          <textarea id="prompt" name="prompt" rows="4" cols="50" placeholder="Type your message here..." required></textarea>
+        </div>
+        <p id="input_warning">Please give a request</p>
          <button id="button" type="submit">Submit</button>
       </form>
   </div>
