--- a/claimSenseAI_web/templates/response_page.html
+++ b/claimSenseAI_web/templates/response_page.html
@@ -17,8 +17,8 @@
     </div>
     <a id="resButton" href="{{ url_for('home') }}">Go back</a>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="../static/js/js.js"></script>
-    <script src="{{ url_for('static', filename='js/js.js') }}"></script>
+    <script src="../static/js/response.js"></script>
+    <script src="{{ url_for('static', filename='js/response.js') }}"></script>
 </div>
 </body>
 </html>
