--- a/claimSenseAI_web/templates/index.html
+++ b/claimSenseAI_web/templates/index.html
@@ -15,7 +15,7 @@
     </div>
   </div>
   <div id="response">
-      <form id="form_post" action="/process" method="POST" enctype="multipart/form-data">
+      <form id="form_post" action="/upload" method="POST" enctype="multipart/form-data">
         <div class="block">
           <div class="row">
             <label class="custom_file_upload" for="claim_pdf">Claim PDF</label>
