--- a/claimSenseAI_web/templates/login_failed.html
+++ b/claimSenseAI_web/templates/login_failed.html
@@ -12,12 +12,12 @@
   <div id="title">
     <h1>AI Claim Review</h1>
   </div>
-
-  <p>Login failed</p>
-  <form action="/" method="GET" enctype="multipart/form-data">
-    <button type="submit">Login</button>
-  </form>
+  <div class="container">
+    <h2 style="color: lightcoral">Login Failed</h2>
+    <form action="/" method="GET" enctype="multipart/form-data">
+      <button id="retryButton" type="submit">Retry Login</button>
+    </form>
+  </div>
 </div>
-
 </body>
 </html>
