--- a/claimSenseAI_web/static/css/css.css
+++ b/claimSenseAI_web/static/css/css.css
@@ -20,7 +20,7 @@ h1 {
 
 #title {
     width: 100%;
-    border-bottom: #181818 2px solid;
+    border-bottom: #202020 2px solid;
     background-color: #101010;
 }
 
@@ -46,7 +46,7 @@ h1 {
     padding: 0.8%;
     color: #C0C0C0;
     background-color: #101010;
-    border: 2px solid #181818;
+    border: 2px solid #202020;
 }
 
 #resButton {
@@ -58,17 +58,27 @@ h1 {
     padding: 0.3%;
     color: #C0C0C0;
     background-color: #101010;
-    border: 2px solid #181818;
+    border: 2px solid #202020;
 }
 
-#resButton:hover {
-    background-color: #181818;
-    border-color: #101010;
-    color: #fff;
+#loginbutton, #retryButton {
+    font-size: 1.2em;
+    margin-top: 4%;
+    text-decoration: none;
+    padding: 0.8%;
+    color: #C0C0C0;
+    background-color: #101010;
+    border: 2px solid #202020;
 }
-#button:hover {
+
+#retryButton {
+    margin: 100px;
+    width: 200px;
+}
+
+#button:hover, #resButton:hover, #loginbutton:hover, #retryButton:hover {
     background-color: #181818;
-    border-color: #101010;
+    border-color: #C0C0C0;
     color: #fff;
 }
 
@@ -142,6 +152,7 @@ input[type="file"] {
 }
 
 .custom_file_upload {
+    border: SOLID 2PX #181818;
     font-size: 1.2em;
     padding: 0.7%;
     color: #C0C0C0;
@@ -151,8 +162,8 @@ input[type="file"] {
 
 .custom_file_upload:hover {
     background-color: #181818;
-    border-color: #101010;
-    color: #fff;
+    border: solid 2px #C0C0C0;
+    color: #C0C0C0;
 }
 
 p {
@@ -162,6 +173,37 @@ p {
 
 .hidden {
     display: none;
+}
+
+.login_container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    max-width: 400px;
+    margin: 4%;
+}
+
+.container {
+    margin: 4% auto;
+    /*margin: 3%;*/
+    padding: 5%;
+    max-width: 80%;
+    border: white 1px solid;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically (if needed) */
+}
+
+.login_container label {
+    width: 45%; /* Almost half, adjusting for spacing */
+    text-align: right;
+}
+
+.container input {
+    width: 50%;
+    padding: 8px;
+    box-sizing: border-box;
 }
 
 .center {
@@ -192,6 +234,31 @@ p {
     margin: 0 auto;
 }
 
-#login > input{
+.login_container > input{
     color: black;
+}
+
+#login {
+    width : 70%;
+    margin: 2% auto 0;
+    padding: 2%;
+    border: 1px solid #C0C0C0;
+    background-color: #181818;
+    color: #C0C0C0;
+    flex-direction: column;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically (if needed) */
+}
+
+#login_title {
+    text-align: center;
+    margin: 2% 2% 10%;
+    border-bottom: white 2px solid;
+}
+
+#login_form {
+    display: flex;
+    flex-direction: column; /* Stacks elements vertically */
+    align-items: center; /* Centers horizontally */
+    justify-content: center; /* Centers vertically */
 }
